--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.2",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.20",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "silly-datetime": "^0.1.2"
   },
   "devDependencies": {
     "xlsx": "^0.14.2"
